<resources>
    <string name="app_name">PruebaDarley</string>
    <string name="enter_email">Correo</string>
    <string name="enter_password">Contraseña</string>
    <string name="registrar">Registro</string>
    <string name="login">Iniciar sesion</string>
    <string name="Listas">Ver lista</string>
    <string name="rlista">Registrar usuario</string>
    <string name="bed">Modificar Usuario</string>
    <string name="bdele">Borrar Usuario</string>
    <string name="NombreCompleto">Nombre Completo</string>
    <string name="DNI">Ingresa tu DNI</string>
    <string name="HOB">Ingresa tu Hobbie</string>
</resources>