<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/listabotones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="117dp"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_marginTop="80dp">

        <EditText
            android:id="@+id/tnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/NombreCompleto"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="108dp" />

        <EditText
            android:id="@+id/tdni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/DNI"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="108dp" />

        <EditText
            android:id="@+id/thobbie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/HOB"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="108dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bregistros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/rlista" />

                <Button
                    android:id="@+id/bmodificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="#D6C4C4"
                    android:text="@string/bed" />

                <Button
                    android:id="@+id/beliminar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="#D6C4C4"
                    android:text="@string/bdele" />

                <Button
                    android:id="@+id/blista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="#D6C4C4"
                    android:clickable="false"
                    android:text="@string/Listas" />




        </LinearLayout>


    </LinearLayout>

</RelativeLayout>